CHANGES for LIRE
================

2014-04-16
==========
  - Re-organized UCI Benchmarking
  - Renamed LoDe to SIMPLE

2014-04-16
==========
  - Added and tested LoDe (using global descriptors as local ones)
  - Created and tested a LocalFeatureHistogramBuilder based on the
    Apache Commons Math KMeans++ implementation
  - Fixed several issues with net.semanticmetadata.lire.imageanalysis.bovw.LocalFeatureHistogramBuilder

2014-04-14
==========
  - Updated jopensurf to latest svn / git version.
  - linked sift implementation to math3 package of Apache Math Commons
  - fixed image cropping in ImageUtils. It didn't crop, but scaled
  - added generic method to AbstractDocumentBuilder (arch simplification.)
  - made CEDD work with smaller images (Tnx to Savvas Chatzichristofis)

2014-03-05
==========
  - Fixed LireDemo bugs based on comments of Martha Larson's students from TU Delft:
    * Re-sized large images to prevent out-of-memory errors
    * Adapted error message to let people know they have to create a local feature histogram prior to searching for it.

2013-10-29
==========
  - Doubled PHOG & Canny Edge Detector extraction speed (with Carlos Perez Lara)

2013-10-22
==========
  - Added difference of Gaussians method to ImageUtils and unit test

2013-10-14
==========
  - Added constructor to GenericDocumentBuilder to allow for selection of Hashing algorithm.
  - Added some test files to excludes in compile task in the ant file.

2013-10-01
==========
  - Fixed bugs in Canny Edge Detector implementation
  - Fixed the same bugs in PHOG

2013-09-30
==========
  - Added convenience methods to VLADBuilder (indexMissing, etc.)
  - Added GenericByteLireFeature and renamed generic feature to
    net.semanticmetadata.lire.imageanalysis.GenericDoubleLireFeature


2013-09-27
==========
  - Added a preliminary implementation of the VLAD descriptor (net.semanticmetadata.lire.imageanalysis.bovw.VLADBuilder)